--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@ const { currentPage } = Astro.props;
 ---
 
 <!-- Header -->
-<header class="header" style="view-transition-name: header;">
+<header class="header">
     <div class="header-left">
         <div class="logo">
             <img src="/assets/logo.png" alt="luxsearch logo">
